@@ -925,9 +925,10 @@ function getBaseClientConfig (conf, agent) {
     time: conf.apiRequestTime * 1000,
     maxQueueSize: conf.maxQueueSize,
 
-    // Debugging
+    // Debugging/testing options
     logger: clientLogger,
     payloadLogFile: conf.payloadLogFile,
+    apmServerVersion: conf.apmServerVersion,
 
     // Container conf
     containerId: conf.containerId,
