@@ -43,6 +43,10 @@ class NoopTransport {
     }
   }
 
+  supportsKeepingUnsampledTransaction () {
+    return true
+  }
+
   // Inherited from Writable, called in agent.js.
   destroy () {}
 }
